Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_spinnerapp.yml
+++ b/.github/workflows/main_spinnerapp.yml
@@ -49,9 +49,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -62,17 +60,10 @@ jobs:
         run: unzip release.zip
 
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D7822E0FDE5B48A4806052881E94EDAD }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_231A29A4BA2442B58DC7AFFF7C1D3A69 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_794156A92034482D9653137FD057BCEC }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'SpinnerApp'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A94323C5237346979E6EA2573542A49E }}
