Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_spinnerapp.yml
+++ b/.github/workflows/main_spinnerapp.yml
@@ -49,7 +49,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -60,10 +62,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E6A0F5D770A348D1903708A3E85A253E }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E81DDFDD99C140C0AD799008D2EFF259 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D56A889C6EA24DB8A266DAE80C83D839 }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'SpinnerApp'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A94323C5237346979E6EA2573542A49E }}
+          
